// SPDX-License-Identifier: Apache-2.0
//Copyright 2022-present Open Networking Foundation

syntax = "proto3";
package api;

option go_package = ".;pfcpsim";

// Inputs

message LogLevel {
  string level = 1;
  bool caller = 2;
}

message AssociateRequest {}

message DisassociateRequest {}

message CreateSessionRequest {}

message ModifySessionRequest {}

message DeleteSessionRequest {}

message InterruptRequest {}

message Empty {}

message Response {
  int32 status_code = 1;
  string message = 2;
}

service PFCPSim {
  // Set PFCPSim log level
  rpc SetLogLevel (LogLevel) returns (LogLevel) {}

  rpc StopgRPCServer (Empty) returns (Response) {}
  rpc StartgRPCServer (Empty) returns (Response) {}

  rpc Associate (AssociateRequest) returns (Response) {}
  rpc Disassociate (DisassociateRequest) returns (Response) {}

  rpc CreateSession (CreateSessionRequest) returns (Response) {}
  rpc ModifySession (ModifySessionRequest) returns (Response) {}
  rpc DeleteSession (DeleteSessionRequest) returns (Response) {}
}
