// SPDX-License-Identifier: Apache-2.0
//Copyright 2022-present Open Networking Foundation

syntax = "proto3";
package api;

option go_package = ".;api";

message LogLevel {
  string level = 1;
  bool caller = 2;
}

message EmptyRequest {}

message Response {
  int32 status_code = 1;
  string message = 2;
}

service PFCPSim {
  // Set PFCPSim log level
  rpc SetLogLevel (LogLevel) returns (LogLevel) {}

  rpc Associate (EmptyRequest) returns (Response) {}
  rpc Disassociate (EmptyRequest) returns (Response) {}

  rpc CreateSession (EmptyRequest) returns (Response) {}
  rpc ModifySession (EmptyRequest) returns (Response) {}
  rpc DeleteSession (EmptyRequest) returns (Response) {}
}
